UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Actual_Reach__c.field-meta.xml
<CustomField>
    <fullName>Actual_Reach__c</fullName>
    <formula>Reach__c  *  Response_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>