UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Cost_of_Publication__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Publication__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost of Publication</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>