UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Media_Agent__c.field-meta.xml
<CustomField>
    <fullName>Media_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Publications</relationshipName>
    <type>Lookup</type>
</CustomField>