UseCaseManagement/force-app/main/default/objects/Publication__c/fields/MX_Relations_Publication_Commission__c.field-meta.xml
<CustomField>
    <fullName>MX_Relations_Publication_Commission__c</fullName>
    <formula>Publication_Revenue__c  * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MX Relations Publication Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>