UseCaseManagement/force-app/main/default/objects/Publication__c/fields/No_of_Campaign_elements__c.field-meta.xml
<CustomField>
    <fullName>No_of_Campaign_elements__c</fullName>
    <label>No of Campaign elements</label>
    <summaryFilterItems>
        <field>Campaign_Element__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Element__c.Publication_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>