UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Postal_Code_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_ZIP__c</fullName>
    <label>Postal Code/ZIP</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>