UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Publication_Language__c.field-meta.xml
<CustomField>
    <fullName>Publication_Language__c</fullName>
    <label>Publication Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>