UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Publication_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Publication_Revenue__c</fullName>
    <formula>Cost_of_Publication__c  *  No_of_Campaign_elements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>