UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type__c</fullName>
    <label>Publication Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>