UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Region_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Region_of_Operation__c</fullName>
    <label>Region of Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>Central and Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Mediterranean &amp; Middle East</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>