UseCaseManagement/force-app/main/default/objects/Publication__c/fields/Response_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Response_Percentage__c</fullName>
    <label>Response Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>