UseCaseManagement/force-app/main/default/objects/Publication__c/listViews/Publications.listView-meta.xml
<ListView>
    <fullName>Publications</fullName>
    <columns>NAME</columns>
    <columns>Cost_of_Publication__c</columns>
    <columns>Publication_Type__c</columns>
    <columns>Publication_Language__c</columns>
    <columns>Publication_Cycle__c</columns>
    <columns>Reach__c</columns>
    <filterScope>Mine</filterScope>
    <label>Publications</label>
</ListView>